--- a/index.css
+++ b/index.css
@@ -171,15 +171,48 @@ h1,h2 {
     height:42px;
 }
 
+#icon4 {
+    width:43px;
+    height:48px;
+}
+
 #about>div:first-child>div {
     display: flex;
-    width:20%;
+    width:30%;
     margin-top: 20px;
     /* border: 1px solid white; */
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
 
 
 }
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: fit-content;
+    background-color: #0c0ce2;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    /* bottom: 0px; */
+    top:1px;
+  
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
 
