--- a/index.css
+++ b/index.css
@@ -258,15 +258,16 @@ h1,h2 {
     height: auto;
     width: 100%;
     position: relative;
-    padding-left: 15px;
+    padding-left: 0px;
     padding-bottom: 20px;
+    margin: auto;
 
 }
 
 #skills>h2 {
     color:white;
     text-decoration: underline;
-    position: realtive;
+    position: relative;
     padding-top: 35px;
     text-align: center;
     font-weight: bolder;
@@ -279,48 +280,67 @@ h1,h2 {
     margin: auto;
     margin-top: 50px;
     display:grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 230px);
-    gap:25px;
-
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 300px);
+    gap:7%;
+    height: 650px;
+    margin-bottom: 80px;
+    /* border:1px solid white; */
     
 }
-
+#row1>div {
+    /* border:1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 #row2 {
-    width:76%;
-    margin-left: 70px;
+    width:90%;
+    margin: auto;
     margin-top: 50px;
     display:grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 230px;
-    gap:25px;
+    grid-template-rows: repeat(1, 300px);
+    gap:7%;
+    height: 350px;
 
 }
+#row2>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
-#row1 > div:hover {
+#row1>div:hover {
     margin: 4px;
 }
 
- #row2 > div:hover {
+
+
+#row2 > div:hover {
     margin: 4px;
 }
 #skills img {
-    width:72%;
-    height:72%;
+    width:82%;
+    height:66%;
     border-radius: 20px;
-    border:4px solid #2626fb;
     padding: 1.5px;
 
 }
 
+#spr {
+    width:30%;
+    height:25%;
+}
 .tech {
-    color:black;
-    background-color: rgb(243, 169, 19);
+    color:rgb(243, 169, 19);
     width: fit-content;
-    padding: 6px 16px;
-    margin-left: 70px;
+    margin-left: 125px;
     border-radius: 8px;
-    border: 2px solid white;
+    margin-top: 0px;
+    font-size: x-large;
 }
 
 #proj {
@@ -583,3 +603,104 @@ input {
     padding-bottom: 30px;
   }
   
+
+  
+
+  @media screen and (min-width: 651px) and (max-width: 1024px) {
+    #navbar {
+        display:none;
+    }
+
+    #about {
+        height:auto;
+        display: flex;;
+        flex-direction: column-reverse;
+        justify-content: left;
+        align-items: center;
+        padding: 30px;
+        padding-left: 0px;
+    
+    }
+
+    #about>div:first-child {
+        padding-left: 10%;
+        padding-top: 0;
+        padding-bottom: 50px;
+    }
+
+    #about>div:nth-child(2) {
+        padding-bottom: 15px;
+        display:flex;
+        justify-content: center;
+    }
+
+    #about>div:first-child>div {
+        margin-left: -3px;
+    }
+
+    #aboutme {
+        height:auto;
+    }
+
+    #aboutme>div {
+        height:auto;
+        padding-bottom: 60px;
+        position:relative;
+    }
+
+    #row1{
+        width:80%;
+        height:400px;
+        margin: auto;
+        margin-top: 50px;
+        margin-bottom: 100px;
+        display:grid;
+        grid-template-columns: repeat(3, 160px);
+        grid-template-rows: repeat(2, 180px);
+        flex-wrap: wrap;
+        gap:10%;
+    }
+
+    
+    #row2 {
+        width:80%;
+        height:250px;
+        margin: auto;
+        margin-top: 50px;
+        display:grid;
+        grid-template-columns: repeat(3, 160px);
+        grid-template-rows: repeat(1, 180px);
+        flex-wrap: wrap;
+        gap:10%;
+    
+    }
+    
+    .tech {
+        color:rgb(243, 169, 19);
+        width: fit-content;
+        margin-left: 13%;
+        border-radius: 8px;
+        margin-top: 20px;
+        font-size: x-large;
+    }
+
+    #proj>div {
+        width: 65%;
+        height: auto;
+        margin: auto;
+        margin-bottom: 60px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 520px;
+        gap:100px;
+    }
+
+    #emph {       
+        margin-left: 23px;      
+    }
+
+    #emph>div {
+       
+        padding-left:21px;
+      }
+}
