--- a/index.css
+++ b/index.css
@@ -127,6 +127,9 @@ html {
 
 }
 
+#about>div:first-child>button:hover {
+    opacity: 0.6;
+}
 #name {
     font-size: 55px;
     font-weight: 900;
@@ -161,7 +164,9 @@ html {
     display: flex;
     align-items: center;
     margin-left: 65px;
+    padding-top: 36px;
 }
+
 
 #picborder {
 
@@ -200,7 +205,9 @@ h1,h2 {
     width:43px;
     height:48px;
 }
-
+#icon2:hover , #icon3:hover, #icon4:hover{
+    opacity: 0.5;
+}
 #about>div:first-child>div {
     display: flex;
     width:30%;
@@ -346,10 +353,11 @@ h1,h2 {
 #proj {
     width: 100%;
     height: auto;
-    margin-top: 150px;
+    margin-top: 170px;
     margin: auto;
     position: relative;
     border-top: 2px solid rgb(97, 94, 94);
+    padding-bottom: 20px;
 
 }
 
@@ -361,6 +369,7 @@ h1,h2 {
     text-align: center;
     font-weight: bolder;
     margin-bottom: 60px;
+    margin-top: 55px;
 }
 
 #proj>div {
@@ -381,7 +390,9 @@ h1,h2 {
 }
 
 
-
+#e1:hover, #e2:hover , #g1:hover, #g2:hover{
+    opacity: 0.5;
+}
 
 .proimg {
     width:92%;
@@ -444,7 +455,7 @@ img {
 
 #cal {
     width:85%;
-    height: 300px;
+    height: 330px;
     margin: auto;
 }
 
@@ -460,7 +471,7 @@ img {
     color:white;
     text-decoration: underline;
     position: realtive;
-    padding-top: 35px;
+    padding-top: 55px;
     text-align: center;
     font-weight: bolder;
     margin-bottom: 50px;
@@ -469,7 +480,7 @@ img {
 
 #contact {
     width:100%;
-    height: 600px;
+    height: 650px;
     background-color: black;
     border-top: 2px solid rgb(97, 94, 94);
     border-bottom: 2px solid rgb(97, 94, 94);
@@ -482,7 +493,7 @@ img {
     text-align: center;
     font-weight: bolder;
     margin-bottom: 20px;
-    margin-top: 30px;;
+    margin-top: 55px;;
     background-color: black;
 
 }
