--- a/index.css
+++ b/index.css
@@ -613,7 +613,49 @@ input {
     padding-bottom: 30px;
   }
   
+  #stat {
+    color:white;
+    text-decoration: underline;
+    position: realtive;
+    padding-top: 55px;
+    text-align: center;
+    font-weight: bolder;
+    margin-bottom: 50px;
+    border-top: 2px solid rgb(97, 94, 94);
+  }
 
+  #statbox {
+    width: 95%;
+    margin:auto;
+    height:205px;
+    /* border: 1px solid yellow; */
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 205px;
+    gap:4%;
+    margin-bottom: 90px;
+
+   
+  }
+
+  #statbox>div {
+    border: 2px solid white;
+    color:white;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8%; 
+  }
+
+  #statbox>div:hover {
+    margin:2px;
+  }
+  
+  #statbox>div>h1 {
+    margin-bottom: -8px;
+    
+  }
   
 
   @media screen and (min-width: 651px) and (max-width: 1024px) {
