--- a/index.css
+++ b/index.css
@@ -755,6 +755,30 @@ input {
         gap:15%;
     }
 
+    #statbox {
+        width: 95%;
+        margin:fit-content;
+        height:205px;
+        /* border: 1px solid yellow; */
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 200px 200px;
+        gap:18% 6%;
+        margin-bottom: 300px;
+        
+       
+      }
+    
+      #statbox>div {
+        border: 2px solid white;
+        color:white;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8%; 
+      }
+
    
 }
 
@@ -885,6 +909,13 @@ input {
         gap:5%;
         height:500px;
         background-color: black;
+    }
+
+    #stat {
+        display:none;
+    }
+    #statbox {
+        display:none;
     }
 
     
