--- a/index.css
+++ b/index.css
@@ -778,15 +778,11 @@ input {
         border-radius: 8%; 
       }
 
-      /* #gitcont, #cal {
+      #gitcont, #cal {
         display: none;
-    } */
+    }
 
-    /* #calnder {
-        width:fit-content
-    } */
-
-   
+    
 }
 
 @media screen and (min-width: 320px) and (max-width:650px) {
