Worked on git calender section

--- a/index.css
+++ b/index.css
@@ -778,8 +778,12 @@ input {
         border-radius: 8%; 
       }
 
-      #gitcont, #cal, #calender {
+      #gitcont {
         display: none;
+      }
+
+      #cal {
+        display:none;
       }
 
     
