--- a/index.css
+++ b/index.css
@@ -90,6 +90,121 @@ html {
 
 }
 
+
+
+*{
+  padding:0;
+  margin: 0;
+  /* box-sizing: border-box; */
+
+}
+
+header {
+    background-color: black;
+    
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    color:white;
+    text-decoration: none;
+}
+
+.navbar {
+    min-height:70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 24px;
+}
+
+.nav-menu {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:60px;
+    
+}
+
+.nav-branding {
+    font-size:2rem;
+    
+
+}
+
+.nav-link {
+    transition: 0.7s ease;
+}
+
+.nav-link:hover {
+    color : dodgerblue;
+}
+
+.hmaburger {
+    display:none;
+    cursor:pointer;
+}
+
+.bar {
+    display:block;
+    width:25px;
+    height:3px;
+    margin:5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
+    
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 1024px) {
+    .hamburger {
+        display:block;
+    }
+
+    .hamburger.active.bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active.bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active.bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu {
+        position:fixed;
+        left:-100%;
+        top:55px;
+        gap:0;
+        flex-direction: column;
+        background-color: black;
+        width:100%;
+        text-align:center;
+        transition: 0.3s;
+        z-index: 10;
+        opacity: 1;
+        height:550px;
+    }
+
+
+    .nav-item {
+        margin:16px 0;
+       
+    }
+
+
+    .nav-menu.active {
+        left:0;
+    }
+
+}
+ 
 #about {
     height: 500px;
     width: 85%;
@@ -793,8 +908,9 @@ input {
 @media screen and (min-width: 320px) and (max-width:650px) {
     
     #navbar {
-        display:none;
-        padding: 0px;
+    
+       display:none;
+        
     }
 
     #about {
